[gd_scene load_steps=14 format=3 uid="uid://crwqyvvvfl5o7"]

[ext_resource type="Texture2D" uid="uid://i036kmeuy3sl" path="res://Scenes/Main/main_ui/main_ui_bg_tile.png" id="1_25roi"]
[ext_resource type="Script" uid="uid://deoy300w1khdw" path="res://Scenes/Main/main_ui/main_ui.gd" id="1_hvcgl"]
[ext_resource type="Texture2D" uid="uid://oqfi3l4hxqan" path="res://Scenes/Main/main_ui/main_ui_bg_tile_2.png" id="1_pbqvl"]
[ext_resource type="FontFile" uid="uid://ds0qrrbdvqa6n" path="res://Resources/Fonts/SF Sports Night.ttf" id="2_25mr1"]
[ext_resource type="Texture2D" uid="uid://x245tsph8p3j" path="res://Scenes/Main/main_ui/main_ui_bg_tile_3.png" id="3_25mr1"]
[ext_resource type="FontFile" uid="uid://q2kbgu0jja56" path="res://Resources/Fonts/sportsjersey.ttf" id="3_i4lxe"]
[ext_resource type="Texture2D" uid="uid://d20w5s52s1xu" path="res://Scenes/Main/main_ui/main_ui_bg_tile_4.png" id="4_i4lxe"]
[ext_resource type="Theme" uid="uid://bkrlwg21fhprn" path="res://Resources/Themes/edit_button.tres" id="5_mbwly"]
[ext_resource type="Texture2D" uid="uid://b4x6w635hpwxm" path="res://Autoloads/Icons/save_icon.png" id="6_gu5vi"]
[ext_resource type="Texture2D" uid="uid://b63cjwl8cphrc" path="res://Autoloads/Icons/load_icon.png" id="7_bgm7v"]
[ext_resource type="Texture2D" uid="uid://hqu8087deqdr" path="res://Autoloads/Icons/reset_icon.png" id="8_bgm7v"]

[sub_resource type="LabelSettings" id="LabelSettings_i4lxe"]
line_spacing = 0.0
paragraph_spacing = -4.0
font = ExtResource("2_25mr1")
font_size = 84
font_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.21960784)
shadow_offset = Vector2(2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hvcgl"]
font = ExtResource("3_i4lxe")
font_size = 64
font_color = Color(0, 0, 0, 1)

[node name="MainUI" type="Control"]
custom_minimum_size = Vector2(900, 2025)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_hvcgl")

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="BG" type="TextureRect" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_25roi")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="RealMainContainer" type="VBoxContainer" parent="MainContainer/BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TitleLabel" type="Label" parent="MainContainer/BG/RealMainContainer"]
custom_minimum_size = Vector2(0, 175)
layout_mode = 2
size_flags_horizontal = 4
text = "Beastieball
Puzzle Maker"
label_settings = SubResource("LabelSettings_i4lxe")
horizontal_alignment = 1
vertical_alignment = 2

[node name="InstructionLabel" type="Label" parent="MainContainer/BG/RealMainContainer"]
layout_mode = 2
text = "Click on the picture to edit"
label_settings = SubResource("LabelSettings_hvcgl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MainContainer/BG/RealMainContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_vertical = 8

[node name="EditMenusSpace" type="Control" parent="MainContainer/BG/RealMainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/BG/RealMainContainer/EditMenusSpace"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="ColorRect" type="ColorRect" parent="MainContainer/BG/RealMainContainer/EditMenusSpace/MarginContainer"]
layout_mode = 2
color = Color(0.26666668, 0.3764706, 0.3882353, 1)

[node name="Spacer2" type="Control" parent="MainContainer/BG/RealMainContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 8

[node name="LowerButtonContainer2" type="HBoxContainer" parent="MainContainer/BG/RealMainContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="SaveImageButton" type="Button" parent="MainContainer/BG/RealMainContainer/LowerButtonContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("5_mbwly")
theme_override_constants/h_separation = 4
theme_override_constants/icon_max_width = 85
theme_override_constants/line_spacing = -8
text = "Save
PNG"
icon = ExtResource("6_gu5vi")
expand_icon = true

[node name="SaveJSONButton" type="Button" parent="MainContainer/BG/RealMainContainer/LowerButtonContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("5_mbwly")
theme_override_constants/h_separation = 4
theme_override_constants/icon_max_width = 85
theme_override_constants/line_spacing = -8
text = "Save
JSON"
icon = ExtResource("6_gu5vi")
expand_icon = true

[node name="LoadJSONButton" type="Button" parent="MainContainer/BG/RealMainContainer/LowerButtonContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("5_mbwly")
theme_override_constants/h_separation = 4
theme_override_constants/icon_max_width = 85
theme_override_constants/line_spacing = -8
text = "Load
JSON"
icon = ExtResource("7_bgm7v")
expand_icon = true

[node name="Spacer3" type="Control" parent="MainContainer/BG/RealMainContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_vertical = 8

[node name="ResetButton" type="Button" parent="MainContainer/BG/RealMainContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("5_mbwly")
theme_override_constants/h_separation = 4
theme_override_constants/icon_max_width = 65
theme_override_constants/line_spacing = -8
text = "Reset Board"
icon = ExtResource("8_bgm7v")
expand_icon = true

[node name="Spacer4" type="Control" parent="MainContainer/BG/RealMainContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_vertical = 8

[node name="Transitions" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(45, 2025)
layout_mode = 2
theme_override_constants/separation = 0
metadata/_edit_lock_ = true

[node name="Transit1" type="TextureRect" parent="MainContainer/Transitions"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = ExtResource("1_pbqvl")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="Transit2" type="TextureRect" parent="MainContainer/Transitions"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = ExtResource("3_25mr1")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="Transit3" type="TextureRect" parent="MainContainer/Transitions"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = ExtResource("4_i4lxe")
stretch_mode = 1
metadata/_edit_lock_ = true
